# fr-tiktok

./: .gitignore  ARCHITECTURE_ISSUES.md  ARCHITECTURE_REVIEW.md  Agents.md  README.md  feedback.md  pyproject.toml
docs/: package-creation-standard.md
docs/reusable-packages/: README.md  tk-aligner.md  tk-batch-translate.md  tk-punctuation.md  tk-srt-merger.md  tk-stt.md
scripts/: dev.sh
tk-aligner/: pyproject.toml  refer.py  test.sh  test_input.json
tk-aligner/src/tk_aligner/: __init__.py  aligner.py  cli.py
tk-aligner/tests/: test_logging.py
tk-batch-translate/: pyproject.toml
tk-batch-translate/src/tk_batch_translate/: cli.py  config.py
tk-batch-translate/tests/: test_logging.py
tk-batch-translate/tk_batch_translate/: __main__.py  batcher.py  cli.py  validator.py
tk-batch-translate/tk_batch_translate/comments/: prompt.txt  translator.py
tk-batch-translate/tk_batch_translate/srt/: parser.py  preprocessor.py  translator.py
tk-channel-checker/: channel.md  channel_monitor.md  pyproject.toml  test.sh
tk-channel-checker/src/tk_channel_checker/: __init__.py  cli.py  constants.py  validator.py
tk-channel-checker/tk_channel_checker/: cli.py  parser.py  scraper.py
tk-comment-checker/: debug_page.py  get_comments.md  link.md  pyproject.toml
tk-comment-checker/src/tk_comment_checker/: __init__.py  cli.py  constants.py  cookies.py  parser.py  scraper.py  validator.py
tk-comment-translator/: comments-input.json  comments-output.json  description.md  plan.md  prompt.txt  pyproject.toml
tk-comment-translator/tk_comment_translator/: __main__.py  batcher.py  cli.py  llm.py  translator.py  validator.py
tk-down/: TIKTOK_DOWNLOAD_INSTRUCTIONS.md  pyproject.toml  test_download.py  test_output.txt
tk-down/src/tk_down/: browser.py  cli.py  downloader.py  http_fallback.py  resolver.py
tk-orchestrator/: README.md  channel-checker-output.json  config.example.yaml  config.yaml  plan.md  pyproject.toml  test.md  tk_orchestrator.db
tk-orchestrator/artifact-reference/: align-output.json  vtt-output.vtt
tk-orchestrator/docs/: architecture.md  feature_watched_percent.md  phase1-models.md  phase2-api.md  phase3-scheduler.md  phase4-worker.md  refactoring-plan.md  watched-retention-plan.md
tk-orchestrator/src/tk_orchestrator/: __init__.py  api.py  cli.py  config.py  db.py  logging_config.py  mlx.py  pipeline.py  queue.py  scheduler.py  video_retention.py
tk-orchestrator/src/tk_orchestrator/api/: __init__.py  routes.py
tk-orchestrator/src/tk_orchestrator/models/: __init__.py  schemas.py  session.py  tables.py
tk-orchestrator/src/tk_orchestrator/scheduler/: __init__.py  polling.py  subprocess.py
tk-orchestrator/src/tk_orchestrator/worker/: __init__.py  pipeline.py  queue.py
tk-orchestrator/tests/: README.md  conftest.py  test_api_validation.py  test_config.yaml  test_default_channels.py  test_interrupted_recovery.py  test_mlx_queue.py  test_pipeline.py  test_pipeline_e2e.py  test_retention.py
tk-orchestrator/tests/fixtures/7234217708424826139/: aligned.json  punctuated.json  raw_transcription.json  subtitles.srt  subtitles.vtt
tk-punctuation/: input.json  pyproject.toml  refer.py  test_output.json
tk-punctuation/src/tk_punctuation/: __init__.py  cli.py  punctuator.py
tk-punctuation/tests/: test_logging.py
tk-srt-merger/: pyproject.toml  test_merge.py
tk-srt-merger/src/tk_srt_merger/: __init__.py  cli.py  merger.py
tk-srt-translate/: pyproject.toml  translation-service-spec.md
tk-srt-translate/tk_srt_translate/: __init__.py  batcher.py  cli.py  config.py  llm.py  parser.py  preprocessor.py  prompt.txt  translator.py  validator.py
tk-stt/: pyproject.toml  refer.py
tk-stt/src/tk_stt/: __init__.py  cli.py  stt.py
tk-stt/tests/: test_logging.py
tk-web/: API.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
tk-web/docs/: frontend-integration.md  ios-app-plan.md  plan.md  smart-feed-plan.md
tk-web/ios/App/App/: Info.plist
tk-web/ios/App/App.xcodeproj/: project.pbxproj
tk-web/ios/App/App.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
tk-web/ios/App/CapApp-SPM/: Package.swift
tk-web/public/: manifest.webmanifest
tk-web/src/: App.tsx  api.ts  index.css  types.ts
tk-web/src/__tests__/: feedPersistence.test.ts
tk-web/src/components/: ChannelBar.tsx  CommentsPanel.tsx  SubtitleOverlay.tsx  SubtitleSettingsPanel.tsx  VideoFeed.tsx  VideoPlayer.tsx
tk-web/src/context/: SmartFeedContext.tsx  SubtitleSettingsContext.tsx
tk-web/src/hooks/: useVtt.ts  useWakeLock.ts
tk-web/src/lib/: feedSort.ts  playStatsDb.ts  videoCacheManager.ts
tk-web/src/utils/: parseVtt.ts
