[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tk-batch-translate"
version = "0.1.0"
description = "Batch-translate TikTok comments and SRT subtitles (French to Chinese) using a local MLX LLM"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "mlx>=0.18",
    "mlx-lm>=0.18",
]

[project.scripts]
tk-batch-translate = "tk_batch_translate.cli:main"

[dependency-groups]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/tk_batch_translate"]
