[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-channel-checker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "playwright",
    "playwright-stealth",
]

[project.scripts]
tk-channel-checker = "tk_channel_checker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tk_channel_checker*"]
