[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tk-channel-checker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "playwright",
    "playwright-stealth",
]

[project.scripts]
tk-channel-checker = "tk_channel_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tk_channel_checker"]
