[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-comment-checker"
version = "0.1.0"
description = "Fetch top TikTok comments from a video URL, sorted by likes."
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "playwright-stealth",
    "yt-dlp",
]

[project.scripts]
tk-comments = "tk_comment_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
