[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tk-comment-checker"
version = "0.1.0"
description = "Fetch top TikTok comments from a video URL, sorted by likes."
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "playwright",
    "playwright-stealth",
    "yt-dlp",
]

[project.scripts]
tk-comments = "tk_comment_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tk_comment_checker"]
