[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-comment-translator"
version = "0.1.0"
description = "Translate TikTok comment JSON into bilingual JSON using a local MLX LLM"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.18",
    "mlx-lm>=0.18",
]

[project.scripts]
tk-comment-translator = "tk_comment_translator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tk_comment_translator*"]
