[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tk-punctuation"
version = "0.1.0"
description = "Add punctuation to raw transcription text using kredor/punctuate-all"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "transformers>=4.40",
    "torch",
]

[project.scripts]
tk-punctuation = "tk_punctuation.cli:main"

[dependency-groups]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/tk_punctuation"]
