[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-srt-translate"
version = "0.1.0"
description = "Translate SRT subtitle files into bilingual SRT using a local MLX LLM"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.18",
    "mlx-lm>=0.18",
]

[project.scripts]
tk-srt-translate = "tk_srt_translate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tk_srt_translate*"]
