[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tk-stt"
version = "0.1.0"
description = "Speech-to-text CLI and library using mlx-audio + Whisper"
requires-python = ">=3.11"
dependencies = [
    "mlx-audio",
    "click",
]

[project.scripts]
tk-stt = "tk_stt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tk_stt"]
